[tool.poetry]
name = "aiopostgresbot"
version = "0.1.0"
description = "AioGram + Postgres"
authors = ["N1"]

[tool.poetry.dependencies]
python = "3.9.7"
SQLAlchemy = "^1.4.26"
tqdm = "^4.62.3"
requests = "^2.26.0"
ipykernel = "^6.5.0"
psycopg2 = "^2.9.1"
aiogram = "^2.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
